Added link to LabourForce repo

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Labour Force<br />
+										<h2><a href="https://github.com/annajjames/LabourForce">Labour Force<br />
 										Statistical Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/LabourForce.png" alt="" /></a>
+									<a href="https://github.com/annajjames/LabourForce" class="image fit"><img src="images/LabourForce.png" alt="" /></a>
 									<p>Time series decomposition, seasonality, autocorrelation, hypothesis tests</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/annajjames/LabourForce" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
