--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<header>
 										
 										<h2><a href="https://github.com/annajjames/CanadaPR">Data Exploration & Visualization<br />
-										Permanent Residency Applications to Canada</a></h2>
+										PR Applications to Canada</a></h2>
 									</header>
 									<a href="https://github.com/annajjames/CanadaPR" class="image fit"><img src="images/CanadaPr.png" alt="" /></a>
 									<!-- Write project description below -->
