--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/annajjames/CanadaPR">Data Exploration & Visualization<br />
+										<h2><a href="https://github.com/annajjames/CanadaPR">Data Exploration<br />
 										PR Applications to Canada</a></h2>
 									</header>
 									<a href="https://github.com/annajjames/CanadaPR" class="image fit"><img src="images/CanadaPr.png" alt="" /></a>
