--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Anna James' Portfolio<br /></h1>
-						<p>Projects showcasing data cleaning, exploration, statistical analysis, machine learning <br />
+						<p>Projects showcasing machine learning, statistical analysis, data cleaning and data exploration <br />
 						
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -52,9 +52,10 @@
 								<header class="major">
 									
 									<h2><a href="#">Machine Learning</a></h2>
-									<p>Coming Soon... Classification Models</p>
+									<p>National Collision Data</p>
 								</header>
 								<a href="#" class="image main"><img src="images/NatCollision.jpg" alt="" /></a>
+								<p>Coming soon... Classification models</p>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
