Added ML project

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Machine Learning</a></h2>
+									<h2><a href="https://github.com/annajjames/NationalCollision">Machine Learning</a></h2>
 									<p>National Collision Data</p>
 								</header>
-								<a href="#" class="image main"><img src="images/NatCollision.jpg" alt="" /></a>
+								<a href="https://github.com/annajjames/NationalCollision" class="image main"><img src="images/NatCollision.jpg" alt="" /></a>
 								<p>Coming soon... Classification models</p>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/annajjames/NationalCollision" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -93,7 +93,7 @@
 										<h2><a href="#">Big Data<br />
 										Coming Soon...</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/ABO.png" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
