--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<p>National Collision Data</p>
 								</header>
 								<a href="https://github.com/annajjames/NationalCollision" class="image main"><img src="images/NatCollision.jpg" alt="" /></a>
-								<p>Coming soon... Classification models</p>
+								<p>Ensemble classifiers like Gradient Boost, XGBoost, and neural network models for predicting whether a collision will lead to injury/fatality or not</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/annajjames/NationalCollision" class="button large">View Project</a></li>
 								</ul>
