--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<h2><a href="https://github.com/annajjames/NationalCollision">Machine Learning<br />
 										Canada National Collision</a></h2>
 									</header>
-									<a href="https://github.com/annajjames/NationalCollision" class="image fit"><img src="images/NatCollision.jpg" alt="" /></a>
+									<a href="https://github.com/annajjames/NationalCollision" class="image fit"><img src="images/NatCollision copy.jpg.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="https://github.com/annajjames/NationalCollision" class="button">View Project</a></li>
